vpc/modules/ec2/main.tf
resource "aws_security_group" "ec2_sg" {
  name        = var.security_group_name
  description = "Allow specific inbound traffic"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.tags
}

resource "aws_instance" "ec2_instance" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = var.subnet_id
  security_groups = [aws_security_group.ec2_sg.id]
  //security_group_id     = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true

  tags = var.tags
}
